# llm_fight

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  DESIGN_ISSUES.md  ISSUES.md  LICENSE  README.md  SECURITY.md  TODO.md  improve.md  llmfight.ini.example  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: ci.yml
docs/: ADVANCED.md  CREATIVITY_GATE.md  DEVELOPMENT_PLAN.md  Design.md  Design_doc.md  Design_doc_archived_2025.md  REWRITE_MILESTONES.md  TRIAL_OPTIMIZATION.md
docs/archive/: completed-work-2026-05.md  design-doc-archived-2025.md  historical-plans-2026-05.md  resolved-issues-2026-05.md
src/: __init__.py  agents.py  anatomy.py  cli.py  config.py  discord_bot.py  judge.py  rng.py  simulation.py  state.py  transcripts.py  validation.py
src/engine/: combat_log.py  constants.py  fighter.py  logger.py  prompts.py  render.py
src/llm_fight/: __init__.py  agents.py  agents_endpoint.py  agents_metadata.py  agents_schema.py  agents_transport.py  anatomy.py  batch.py  cli.py  config.py  discord_bot.py  effects.py  fight_loop.py  judge.py  model_defaults.py  phase2_authorization.py  phase2_common.py  phase2_effects.py  phase2_repairs.py  phase2_text.py  phase2_wounds.py  profile_generation.py  profiles.py  rng.py  simulation.py  state.py  state_damage.py  state_delta.py  state_invariants.py  token_presets.py  transcripts.py  validation.py  validation_runtime.py
src/llm_fight/engine/: combat_log.py  constants.py  fighter.py  logger.py  prompts.py  render.py  state_summary.py  turn_display.py
src/llm_fight/trials/: __init__.py  analysis.py  analysis_metrics.py  artifacts.py  blind_packs.py  profile_eval.py  runner.py  specs.py  summaries.py
src/llm_fight/utils/: token_counter.py
src/utils/: json_parser.py  token_counter.py
tests/: conftest.py  test_agents.py  test_agents_endpoint.py  test_agents_transport.py  test_anatomy.py  test_batch.py  test_cli.py  test_cli_play.py  test_cli_simulate.py  test_config.py  test_creativity_gate.py  test_discord_bot.py  test_live_api.py  test_live_judge.py  test_live_simulation.py  test_logger.py  test_memory_usage.py  test_packaging.py  test_phase2_authorization.py  test_phase2_authorization_prompt_safety.py  test_phase2_authorization_repairs.py  test_phase2_authorization_rules.py  test_profile_generation.py  test_profile_trials.py  test_profiles.py  test_render.py  test_rng.py  test_rng_seed_import.py  test_simulation.py  test_simulation_failures.py  test_simulation_integration.py  test_simulation_probabilities.py  test_simulation_trace.py  test_simulation_turns.py  test_state.py  test_state_effect_removal.py  test_state_effect_ticks.py  test_test_gating.py  test_token_counter.py  test_transcripts.py  (+3 more)
tests/engine/: test_combat_log.py  test_fighter.py  test_json_parser.py  test_judge.py  test_logger_handlers.py  test_prompts.py  test_state_summary.py
tests/property/: test_apply_damage_property.py  test_apply_delta_property.py
