[tool.black]
line-length = 120

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-fight"
version = "0.1.0"
description = "Turn-based combat simulator with local LLMs"
readme = "README.md"
authors = [{name = "LLM Fighters Project"}]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.5,<4",
    "click>=8.2.1,<9",
    "jsonschema>=4.26,<5",
    "rich>=15,<16",
    "typer>=0.25.1,<1",
]

[project.optional-dependencies]
live = [
    "ollama>=0.6.2,<1",
]
tokens = [
    "tiktoken>=0.12,<1",
]

[project.scripts]
llmfight = "llm_fight.cli:app"

[dependency-groups]
dev = [
    "black>=26.3,<27",
    "flake8>=7.3,<8",
    "hypothesis>=6.152,<7",
    "pytest>=9,<10",
    "pytest-asyncio>=1.3,<2",
    "pytest-cov>=7.1,<8",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "live: requires an explicitly configured live Ollama endpoint",
    "perf: long-running local performance checks",
]
