[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-fight"
version = "0.1.0"
description = "Turn-based combat simulator with local LLMs"
readme = "README.md"
authors = [{name = "LLM Fighters Project"}]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.5,<4",
    "click>=8.2.1,<9",
    "jsonschema>=4.26,<5",
    "rich>=15,<16",
    "typer>=0.25.1,<1",
]

[project.optional-dependencies]
live = [
    "ollama>=0.6.2,<1",
]
tokens = [
    "tiktoken>=0.12,<1",
]

[project.scripts]
llmfight = "llm_fight.cli:app"

[dependency-groups]
dev = [
    "hypothesis>=6.152,<7",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9,<10",
    "pytest-asyncio>=1.3,<2",
    "pytest-cov>=7.1,<8",
    "ruff>=0.15.12",
    "types-jsonschema>=4.26.0.20260508",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "live: requires an explicitly configured live Ollama endpoint",
    "perf: long-running local performance checks",
    "requires_missing_model: opts out of mocked test model fixtures to verify missing-model errors",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/llm_fight/cli.py" = ["B008"]
"src/llm_fight/engine/constants.py" = ["E501", "UP042"]
"src/llm_fight/engine/prompts.py" = ["E501"]
"src/llm_fight/profile_generation.py" = ["E501"]
"src/llm_fight/simulation.py" = ["B023"]

[tool.mypy]
python_version = "3.14"
files = ["src/llm_fight"]
mypy_path = "src"
warn_unused_configs = true
check_untyped_defs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tiktoken"
ignore_missing_imports = true
